fix: :bug: Adjust positioning of image in CSS for better alignment

--- a/storage/style/style.css
+++ b/storage/style/style.css
@@ -153,8 +153,8 @@ body{
 
 
 .imgright{
-    left: 724px ;
-    top: 204px;
+    left: 725px ;
+    top: 205px;
     position: absolute;
     width: 656px;
     height: 760px;
